--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#724608</color>
-    <color name="colorPrimaryDark">#598861</color>
+    <color name="colorPrimary">#076976</color>
+    <color name="colorPrimaryDark">#02434C</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
 </resources>
